# 2024

./: README.md  ctf_config.yaml  docker-compose.yml
Mockingjay Embeds/: README.md
SpillTheBeans/: README.md
challenges/: README.md
challenges/crypto/: README.md
challenges/crypto/Backpacker/: README.md  chall.yaml
challenges/crypto/Bit_Collider/: chall.yaml
challenges/crypto/Bubble Tea/: README.md  chall.yaml
challenges/crypto/Caesar is so simple/: README.md  chall.yaml
challenges/crypto/ECB Penguin/: README.md  chall.yaml
challenges/crypto/Pattern_Recognition/: README.md  chall.yaml
challenges/crypto/Resistance Fighters/: README.md  chall.yaml
challenges/crypto/SimpleRSAChallenge/: chall.yaml  readme.MD  readme.md
challenges/crypto/Viva La Revolution!/: README.md  chall.yaml
challenges/crypto/deserving employee/: README.md  chall.yaml
challenges/crypto/dhi_or_dlo/: chall.yaml  readme.md
challenges/forensics/: README.md
challenges/misc/: README.md
challenges/osint/: README.md
challenges/pwn/: README.md
challenges/re/: README.md
challenges/web/: README.md
challenges/web/Rusty Bot/service/app/: Cargo.toml  Dockerfile
challenges/web/Rusty Bot/service/app/src/: main.rs  user_manager.rs
challenges/web/Rusty Bot/service/app/src/pages/: home.html  index.html
challenges/web/Rusty Bot/service/app/src/pages/static/: home.css  index.css
challenges/web/Rusty Bot/service/app/src/routes/: css.rs  debug.rs  get_note.rs  home.rs  index.rs  login.rs  logout.rs  lookup.rs  mod.rs  register.rs  report.rs  upload.rs
(+320 files in other folders)
