[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-session = { version = "0.8.0", features = ["cookie-session"] }
fancy-regex = "0.13.0"
awc = "3.3.0"
tinytemplate = "1.1"
actix-governor = "0.5.0"
dotenv = "0.15.0"
